<resources>
    <string name="app_name">DesafioGuarani</string>
    <string name="str_products">Products</string>
    <string name="str_search_products">Search Products</string>
    <string name="str_search_button">Search bottom</string>
    <string name="str_stock">STOCK</string>
    <string name="str_invalid_value">Invalid value</string>
    <string name="str_release">RELEASE</string>
    <string name="str_normal">NORMAL</string>
    <string name="str_promotion">PROMOTION</string>
    <string name="str_select_status_product">Select status product: </string>
    <string name="str_price_min">"Price min: %1$s</string>
    <string name="str_price_max">"Price max: %1$s</string>
    <string name="str_stock_value">"Amount: %1$s</string>
    <string name="str_cod_value">"Cod: %1$s</string>
    <string name="str_all_price">All price</string>
    <string name="str_button_close">Button close</string>
    <string name="str_invalid_text_field">Invalid text field!</string>
    <string name="str_nothing_found">nothing found</string>
    <string name="str_loading">Loading...</string>
    <string name="str_home">Home</string>
    <string name="str_clients">Clients</string>
    <string name="str_guarani_sistemas">Guarani Sistemas</string>
    <string name="str_cnpj">CNPJ</string>
    <string name="str_cpf">CPF</string>
    <string name="str_clients_consult">Clients consult</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_register_client">Register Client</string>
    <string name="str_search_clients">Search clients</string>
    <string name="str_select_type_products">Select type products</string>
</resources>