<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.clients.presentation.ClientsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tlb_client"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/str_products"
        android:background="?attr/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/lnl_search"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/lnl_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="?attr/colorPrimary"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tlb_client"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rcv_clients"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <Spinner
            android:id="@+id/spn_status"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:hint="@string/str_search_products"
            android:inputType="text"
            android:autofillHints="no"/>

        <ImageButton
            android:id="@+id/btn_search"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/search_line"
            android:layout_gravity="center"
            android:background="@null"
            android:contentDescription="@string/str_search_button"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_clients"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/tlb_client"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lnl_search"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/layout_item_product" />

</androidx.constraintlayout.widget.ConstraintLayout>