<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.clients.presentation.ClientsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tlb_client"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/str_products"
            android:background="#119740"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/lnl_search"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lnl_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:background="#119740"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tlb_client"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/rcv_clients"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <TextView
                android:id="@+id/txv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
                android:text="@string/str_select_status_product"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@id/edt_search_product"
                app:layout_constraintBottom_toTopOf="@id/edt_search_product"/>

            <Spinner
                android:id="@+id/spn_status"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                app:layout_goneMarginStart="16dp"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toEndOf="@id/txv_status"
                app:layout_constraintTop_toTopOf="parent"/>

            <EditText
                android:id="@+id/edt_search_product"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:hint="@string/str_search_products"
                android:inputType="text"
                android:autofillHints="no"
                app:layout_constraintTop_toBottomOf="@id/spn_status"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_search"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageButton
                android:id="@+id/btn_search"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/search_line"
                android:background="@null"
                android:contentDescription="@string/str_search_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/edt_search_product"
                app:layout_constraintTop_toBottomOf="@id/edt_search_product"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_clients"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/tlb_client"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lnl_search"
            tools:listitem="@layout/layout_item_product" />

        <LinearLayout
            android:id="@+id/lnl_load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical"
            android:background="#7C119740"
            android:visibility="gone"
            tools:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"/>

            <TextView
                android:id="@+id/progressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_loading"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textSize="18sp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/layout_header_drawer"
        app:menu="@menu/navigation_menu" />

</androidx.drawerlayout.widget.DrawerLayout>